--- a/Servisur_Django/Base_Datos/templates/base_datos/main.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/main.html
@@ -29,44 +29,54 @@
   <!-- Botones funcionales -->
   <div class="row text-center g-4">
     <div class="col-md-4">
-      <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <i class="bi bi-tools fs-1 text-primary"></i>
-          <h5 class="mt-3">Registrar Reparación</h5>
+      <a href="{% url 'registrar_reparacion' %}" class="text-decoration-none">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <i class="bi bi-tools fs-1 text-primary"></i>
+            <h5 class="mt-3">Registrar Reparación</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
     <div class="col-md-4">
-      <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <i class="bi bi-clipboard-data fs-1 text-success"></i>
-          <h5 class="mt-3">Consultar Historial</h5>
+      <a href="{% url 'consultar_historial' %}" class="text-decoration-none">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <i class="bi bi-clipboard-data fs-1 text-success"></i>
+            <h5 class="mt-3">Consultar Historial</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
     <div class="col-md-4">
-      <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <i class="bi bi-gear fs-1 text-warning"></i>
-          <h5 class="mt-3">Estado Reparación</h5>
+      <a href="{% url 'estado_reparacion' %}" class="text-decoration-none">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <i class="bi bi-gear fs-1 text-warning"></i>
+            <h5 class="mt-3">Estado Reparación</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
     <div class="col-md-6">
-      <div class="card h-100 shadow-sm mt-4">
-        <div class="card-body">
-          <i class="bi bi-file-earmark-text fs-1 text-secondary"></i>
-          <h5 class="mt-3">Generar Documento</h5>
+      <a href="{% url 'generar_documento' %}" class="text-decoration-none">
+        <div class="card h-100 shadow-sm mt-4">
+          <div class="card-body">
+            <i class="bi bi-file-earmark-text fs-1 text-secondary"></i>
+            <h5 class="mt-3">Generar Documento</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
     <div class="col-md-6">
-      <div class="card h-100 shadow-sm mt-4">
-        <div class="card-body">
-          <i class="bi bi-file-earmark-excel fs-1 text-success"></i>
-          <h5 class="mt-3">Generar Excel</h5>
+      <a href="{% url 'generar_excel' %}" class="text-decoration-none">
+        <div class="card h-100 shadow-sm mt-4">
+          <div class="card-body">
+            <i class="bi bi-file-earmark-excel fs-1 text-success"></i>
+            <h5 class="mt-3">Generar Excel</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
 </div>
