--- a/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
@@ -1,9 +1,11 @@
 {% extends "base_datos/base.html" %}
-{% load static form_tags %}
+<!-- 💻 Datos del equipo + Detalles de la orden -->
+{% load static %}
+<!-- 💻 Datos del equipo + Detalles de la orden -->
 {% block title %}Registrar Reparación - Servisur{% endblock %}
-
+<!-- 💻 Datos del equipo + Detalles de la orden -->
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/panel.css' %}">
+<link rel="stylesheet" href="{% static 'css/panel.css' %}" />
 
 <div class="container py-4">
   <h3 class="mb-3 text-secondary">Registrar Reparación</h3>
@@ -11,7 +13,11 @@
   {% if messages %}
   <div class="mb-3">
     {% for message in messages %}
-      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %}">{{ message }}</div>
+    <div
+      class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %}"
+    >
+      {{ message }}
+    </div>
     {% endfor %}
   </div>
   {% endif %}
@@ -20,100 +26,24 @@
     {% csrf_token %}
 
     <div class="row gx-3">
-      <!-- Datos del cliente -->
+      <!-- 🧍 Datos del cliente -->
       <div class="col-lg-6">
         <div class="card mb-3 p-3">
           <h6 class="mb-3">Datos del cliente</h6>
-
-          <div class="mb-2">
-            {{ cliente_form.Nombre.label_tag }}
-            {{ cliente_form.Nombre|add_class:"form-control" }}
-            {{ cliente_form.Nombre.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ cliente_form.Apellido.label_tag }}
-            {{ cliente_form.Apellido|add_class:"form-control" }}
-            {{ cliente_form.Apellido.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ cliente_form.Rut.label_tag }}
-            {{ cliente_form.Rut|add_class:"form-control" }}
-            {{ cliente_form.Rut.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ cliente_form.Numero_telefono.label_tag }}
-            {{ cliente_form.Numero_telefono|add_class:"form-control" }}
-            {{ cliente_form.Numero_telefono.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ cliente_form.Direccion.label_tag }}
-            {{ cliente_form.Direccion|add_class:"form-control" }}
-            {{ cliente_form.Direccion.errors }}
-          </div>
+          {{ cliente_form.as_p }}
         </div>
       </div>
 
-      <!-- Datos del equipo + Pedido (lado derecho) -->
+      <!-- 💻 Datos del equipo + Detalles de la orden -->
       <div class="col-lg-6">
         <div class="card mb-3 p-3">
           <h6 class="mb-3">Datos del equipo</h6>
-
-          <div class="mb-2">
-            {{ dispositivo_form.Nombre.label_tag }}
-            {{ dispositivo_form.Nombre|add_class:"form-control" }}
-            {{ dispositivo_form.Nombre.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ dispositivo_form.modelo.label_tag }}
-            {{ dispositivo_form.modelo|add_class:"form-select" }}
-            {{ dispositivo_form.modelo.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ dispositivo_form.Trabajo_realizado.label_tag }}
-            {{ dispositivo_form.Trabajo_realizado|add_class:"form-control" }}
-            {{ dispositivo_form.Trabajo_realizado.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ dispositivo_form.Codigo_Bloqueo.label_tag }}
-            {{ dispositivo_form.Codigo_Bloqueo|add_class:"form-control" }}
-            {{ dispositivo_form.Codigo_Bloqueo.errors }}
-          </div>
+          {{ dispositivo_form.as_p }}
         </div>
 
         <div class="card mb-3 p-3">
           <h6 class="mb-3">Detalles de la orden</h6>
-
-          <div class="mb-2">
-            {{ pedido_form.Fecha.label_tag }}
-            {{ pedido_form.Fecha|add_class:"form-control" }}
-            {{ pedido_form.Fecha.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ pedido_form.Coste.label_tag }}
-            {{ pedido_form.Coste|add_class:"form-control" }}
-            {{ pedido_form.Coste.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ pedido_form.Abono.label_tag }}
-            {{ pedido_form.Abono|add_class:"form-control" }}
-            {{ pedido_form.Abono.errors }}
-          </div>
-
-          <div class="mb-2">
-            {{ pedido_form.Restante.label_tag }}
-            {{ pedido_form.Restante|add_class:"form-control" }}
-            {{ pedido_form.Restante.errors }}
-          </div>
-
+          {{ pedido_form.as_p }}
         </div>
       </div>
     </div>
@@ -123,4 +53,6 @@
     </div>
   </form>
 </div>
+
+<script src="{% static 'js/pedido.js' %}"></script>
 {% endblock %}
