--- a/Servisur_Django/Base_Datos/templates/base_datos/Consultar_historial.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Consultar_historial.html
@@ -35,7 +35,7 @@
         <table class="historial-table" style="width: 100%">
           <thead>
             <tr>
-              <th>Número</th>
+              <th>Nombre</th>
               <th>Apellido</th>
               <th>N° Orden</th>
               <th>Fecha</th>
