--- a/Servisur_Django/static/css/panel.css
+++ b/Servisur_Django/static/css/panel.css
@@ -290,3 +290,8 @@ body {
     padding-right: 0.75rem;
   }
 }
+
+.is-invalid {
+  border-color: #dc3545;
+  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+}
