Cambios visuales y generar excel
Cambios visuales en historial de reparación y se creo el visual de generar excel

--- a/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
@@ -1,5 +1,5 @@
 {% extends "base_datos/base.html" %}
-<!-- 💻 Datos del equipo + Detalles de la orden -->
+<!-- Comentario anti errores -->
 {% load static %}
 <!-- 💻 Datos del equipo + Detalles de la orden -->
 {% block title %}Registrar Reparación - Servisur{% endblock %}
